# model-training-db

./: .gitignore  Pipfile  README.md  pyproject.toml
model_training/: schema.py
src/model_training_db/: schema.py
